# champ-edge

./: .gitattributes  .gitignore  .mcp.json  FIREBASE_ADMIN.md  README.md  champedge.spec  firestore.rules  main.py  pyproject.toml  requirements.txt  setup.bat
.claude/: settings.json
assets/: README.md
component/: app.py  stage.py
database/: battle.db  battle.py  battle_alter.py  pokemon.db  pokemon.py
dev/: analyze_positions.py  check_pids.py  check_season.py  detect_party.py  download_regulation_images.py  enhance_item_effects.py  fetch_item_effects.py  fetch_new_megas.py  get_pids.py  handoff_mac_mobile.md  insert_sample_data.py  item_effects_check.csv  item_effects_empty.csv  item_effects_enhanced.csv  item_effects_yakkun.csv  item_list_check.txt  retake_adder.py  retake_analytics.py  retake_record.py  scrape_ability_effects_yakkun.py  scrape_item_effects_yakkun.py  take_analytics_screenshot.py  take_screenshots.py  take_screenshots_full.py  test_capture_image.py  test_capture_img7612.py  test_shape_match.py  tn_comparison.txt  tn_comparison2.txt  tn_debug.txt  tn_debug2.txt  tn_debug3.txt  tn_eng_test.txt  tn_final.txt  tn_final2.txt  tn_manga_ocr.txt  tn_manga_ocr2.txt  tn_manga_ocr3.txt  tn_manga_ocr4.txt  tn_result.txt  (+3 more)
docs/: privacy.html  support.html
mobile/: .gitignore  README.md
mypgl/: analytics.py  const.py  feedback.py  record.py
openspec/: config.yaml
party/: image_parser.py  party.py  setting.txt
pokedata/: calc.py  const.py  exception.py  loader.py  nature.py  pokemon.py  waza.py
recog/: bgm.json  capture.py  coordinate.json  obs.py  (+4 more)
(+278 files in other folders)
