[project]
name = "champ-edge"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "urasaku77", email = "okadaisyskou@yahoo.co.jp" }
]
dependencies = [
    "jaconv",
    "manga-ocr",
    "natsort>=8.4.0",
    "numpy",
    "opencv-python",
    "pillow",
    "pyocr",
    "pytesseract>=0.3.13",
    "selenium>=4.17.2",
    "simpleobsws",
    "ttkthemes",
    "anthropic",
    ]
readme = "README.md"
requires-python = ">= 3.10"

[tool.rye.scripts]
main = "python main.py"
home = "python stats/home.py"
article = "python stats/search.py"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "beautifulsoup4",
    "mypy>=1.15.0",
    "pre-commit>=3.6.0",
    "pyinstaller>=6.7.0",
    "requests",
    "ruff>=0.1.13",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/champ_edge"]

[tool.ruff]
target-version = "py310"

select = ["E", "F", "W", "I", "B"]
fixable = ["ALL"]

ignore = ["E402", "E501", "E722", "F403", "F405"]
